@@ -1,13 +1,13 @@
 package com.ak.comm.converter.aper;
 
 import java.nio.ByteOrder;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Stream;
 
 import javax.annotation.Nonnull;
-import javax.measure.Unit;
+import javax.annotation.ParametersAreNonnullByDefault;
 
 import com.ak.comm.bytes.BufferFrame;
 import com.ak.comm.converter.Converter;
@@ -15,31 +15,38 @@ import com.ak.comm.converter.DependentVariable;
 import com.ak.comm.converter.LinkedConverter;
 import com.ak.comm.converter.ToIntegerConverter;
 import com.ak.comm.converter.Variable;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import tec.uom.se.unit.MetricPrefix;
 import tec.uom.se.unit.Units;
 
-public class AperStage3VariableTest {
-  @DataProvider(name = "variables")
-  public static Object[][] variables() {
-    return new Object[][] {
-        {new byte[] {1,
-            (byte) 0x9a, (byte) 0x88, 0x01, 0,
-            2, 0, 0, 0,
-            (byte) 0xf1, 0x05, 0, 0,
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-            (byte) 0xff, (byte) 0xff, (byte) 0xff, 0,
-            5, 0, 0, 0,
-            (byte) 0xd0, 0x07, 0, 0},
+class AperStage3VariableTest {
+  static Stream<Arguments> variables() {
+    return Stream.of(
+        arguments(new byte[] {1,
+                (byte) 0x9a, (byte) 0x88, 0x01, 0,
+                2, 0, 0, 0,
+                (byte) 0xf1, 0x05, 0, 0,
 
-            new int[] {55442, 330990, 330990, -702471, -702470, 5982, 5982, 1293, 1638}},
-    };
+                (byte) 0xff, (byte) 0xff, (byte) 0xff, 0,
+                5, 0, 0, 0,
+                (byte) 0xd0, 0x07, 0, 0},
+
+            new int[] {55466, 330990, 330990, -702471, -702470, 5982, 5982, 1322, 1747})
+    );
   }
 
-  @Test(dataProvider = "variables")
-  public void testApply(@Nonnull byte[] inputBytes, @Nonnull int[] outputInts) {
+  @ParameterizedTest
+  @MethodSource("variables")
+  @ParametersAreNonnullByDefault
+  void testApply(byte[] inputBytes, int[] outputInts) {
     Converter<BufferFrame, AperStage3Variable> converter = LinkedConverter
         .of(new ToIntegerConverter<>(AperStage1Variable.class, 1000), AperStage2UnitsVariable.class)
         .chainInstance(AperStage3Variable.class);
@@ -48,63 +55,60 @@ public class AperStage3VariableTest {
     for (int i = 0; i < 500 - 1; i++) {
       long count = converter.apply(bufferFrame).peek(ints -> {
         if (!processed.get()) {
-          Assert.assertEquals(ints, outputInts, "expected = %s, actual = %s".formatted(Arrays.toString(outputInts), Arrays.toString(ints)));
+          assertThat(ints).containsExactly(outputInts);
           processed.set(true);
         }
       }).count();
       if (processed.get()) {
-        Assert.assertEquals(count, 10);
+        assertThat(count).isEqualTo(10);
         break;
       }
     }
-    Assert.assertTrue(processed.get(), "Data are not converted!");
-    Assert.assertEquals(converter.getFrequency(), 1000, 0.1);
+    assertTrue(processed.get(), "Data are not converted!");
+    assertThat(converter.getFrequency()).isEqualTo(1000.0);
+  }
+
+  @ParameterizedTest
+  @EnumSource(value = AperStage3Variable.class)
+  void testGetInputVariables(@Nonnull DependentVariable<AperStage2UnitsVariable, AperStage3Variable> variable) {
+    assertThat(variable.getInputVariables()).hasSize(1);
   }
 
   @Test
-  public void testGetInputVariables() {
-    Assert.assertTrue(EnumSet.allOf(AperStage3Variable.class).stream().mapToInt(value -> value.getInputVariables().size())
-        .allMatch(value -> value == 1));
+  void testGetUnit() {
+    assertThat(EnumSet.allOf(AperStage3Variable.class).stream().map(DependentVariable::getUnit))
+        .isEqualTo(
+            List.of(
+                MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM),
+                MetricPrefix.MICRO(Units.VOLT), MetricPrefix.MICRO(Units.VOLT),
+                MetricPrefix.MICRO(Units.VOLT), MetricPrefix.MICRO(Units.VOLT),
+                Units.OHM, Units.OHM
+            )
+        );
   }
 
   @Test
-  public void testGetUnit() {
-    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage3Variable.class).stream().map(DependentVariable::getUnit).toList();
-    Assert.assertEquals(actual,
-        Arrays.asList(
-            MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM),
-            MetricPrefix.MICRO(Units.VOLT), MetricPrefix.MICRO(Units.VOLT),
-            MetricPrefix.MICRO(Units.VOLT), MetricPrefix.MICRO(Units.VOLT),
-            Units.OHM, Units.OHM
-        ),
-        actual.toString()
-    );
+  void testOptions() {
+    assertThat(EnumSet.allOf(AperStage3Variable.class).stream().flatMap(v -> v.options().stream()))
+        .isEqualTo(
+            List.of(
+                Variable.Option.VISIBLE, Variable.Option.VISIBLE, Variable.Option.VISIBLE,
+                Variable.Option.VISIBLE, Variable.Option.VISIBLE,
+                Variable.Option.VISIBLE, Variable.Option.VISIBLE,
+                Variable.Option.TEXT_VALUE_BANNER, Variable.Option.TEXT_VALUE_BANNER
+            )
+        );
   }
 
   @Test
-  public void testOptions() {
-    List<Variable.Option> actual = EnumSet.allOf(AperStage3Variable.class).stream().flatMap(v -> v.options().stream()).toList();
-    Assert.assertEquals(actual,
-        Arrays.asList(
-            Variable.Option.VISIBLE, Variable.Option.VISIBLE, Variable.Option.VISIBLE,
-            Variable.Option.VISIBLE, Variable.Option.VISIBLE,
-            Variable.Option.VISIBLE, Variable.Option.VISIBLE,
-            Variable.Option.TEXT_VALUE_BANNER, Variable.Option.TEXT_VALUE_BANNER
-        ),
-        actual.toString()
-    );
+  void testFilterDelay() {
+    assertThat(EnumSet.allOf(AperStage3Variable.class).stream().mapToDouble(value -> value.filter().getDelay()).toArray())
+        .containsExactly(24.5, 24.5, 24.5, 0.0, 0.0, 0.0, 0.0, 24.5, 24.5);
   }
 
-  @Test
-  public void testFilterDelay() {
-    double[] actual = EnumSet.allOf(AperStage3Variable.class).stream().mapToDouble(value -> value.filter().getDelay()).toArray();
-    double[] expected = {24.5, 24.5, 24.5, 0.0, 0.0, 0.0, 0.0, 24.5, 24.5};
-    Assert.assertEquals(actual, expected, Arrays.toString(actual));
-  }
-
-  @Test
-  public void testInputVariablesClass() {
-    Assert.assertTrue(EnumSet.allOf(AperStage3Variable.class).stream().map(AperStage3Variable::getInputVariablesClass)
-        .allMatch(AperStage2UnitsVariable.class::equals));
+  @ParameterizedTest
+  @EnumSource(value = AperStage3Variable.class)
+  void testInputVariablesClass(@Nonnull DependentVariable<AperStage2UnitsVariable, AperStage3Variable> variable) {
+    assertThat(variable.getInputVariablesClass()).isEqualTo(AperStage2UnitsVariable.class);
   }
 }
